Creates and documents the showall variable
